--- a/index.html
+++ b/index.html
@@ -1,12 +1,5 @@
 <h1>homepage</h1>
-<h2>heading 2</h2>
-<h3>heading 3</h3>
-<h4>heading 4</h4>
-<p>this is a simple paragraph</p>
-<p>this is another paragraph</p>
 
-<section>
-    <h3>another heading</h3>
-    <p>this is one more paragraph</p>
-</section>
-
+<p>this is a short paragraph</p>
+<a href="http://youbee.ac.nz">youbee website</a>
+<a href="http://nzherald.co.nz">nz herald news</a>
