--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
-<h1>homepage</h1>
+<!DOCTYPE html>
+<html lang="en">
 
-<p>this is a short paragraph</p>
-<a href="http://youbee.ac.nz">youbee website</a>
-<a href="http://nzherald.co.nz">nz herald news</a>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>project#1</title>
+</head>
+<h1>project 1 homepage</h1>
+<p>Lorem ipsum <br /> sit amet.</p>
+<hr />
+<h3>Lorem ipsum dolor sit amet.</h3>
+<p>Lorem ipsum dolor sit amet.</p>
+
+<body></body>
+
+</html>
