internal css - please dont' do it this way

--- a/index.html
+++ b/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>project#1</title>
-</head>
-<h1>project 1 homepage</h1>
-<p>Lorem ipsum <br /> sit amet.</p>
-<hr />
-<h3>Lorem ipsum dolor sit amet.</h3>
-<p>Lorem ipsum dolor sit amet.</p>
+    <style>
+      h1 {
+        color: red;
+      }
 
-<body></body>
+      p {
+        color: green;
+        background-color: blanchedalmond;
+      }
+    </style>
+  </head>
 
+  <body>
+    <h1>project 1 homepage</h1>
+    <p>
+      Lorem ipsum <br />
+      sit amet.
+    </p>
+    <hr />
+    <h3>Lorem ipsum dolor sit amet.</h3>
+    <p>Lorem ipsum dolor sit amet.</p>
+  </body>
 </html>
