day 2 paroject html

--- a/index.html
+++ b/index.html
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>project#1</title>
-    <style>
-      h1 {
-        color: red;
-      }
 
-      p {
-        color: green;
-        background-color: blanchedalmond;
-      }
-    </style>
-  </head>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>prject2</title>
+    <link rel="stylesheet" href="./main.css">
+</head>
 
-  <body>
-    <h1>project 1 homepage</h1>
-    <p>
-      Lorem ipsum <br />
-      sit amet.
+<body>
+    <h1>Lorem ipsum dolor sit amet.</h1>
+    <h3 style="color: green;background-color: yellow;font-size:24px;">lorem13</h3>
+
+    <p class="text text-centered">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus asperiores impedit porro, reiciendis fugit
+        deleniti vitae ullam provident, nihil hic deserunt illo esse commodi. Illo doloremque molestias numquam aperiam
+        tempore.
     </p>
-    <hr />
-    <h3>Lorem ipsum dolor sit amet.</h3>
-    <p>Lorem ipsum dolor sit amet.</p>
-  </body>
+    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, autem reiciendis quo minus ad saepe dolores mollitia eaque id recusandae accusamus suscipit facilis iure at, et deserunt, dolorum tenetur cumque.</p>
+
+
+
+</body>
+
 </html>
+
+<!-- http://127.0.0.1:5500/index.html use this my go live link -->
