cementic html div section span etc

--- a/index.html
+++ b/index.html
@@ -11,15 +11,41 @@
 
 <body>
     <h1>Lorem ipsum dolor sit amet.</h1>
-    <h3 style="color: green;background-color: yellow;font-size:24px;">lorem13</h3>
+    <h2>Lorem, ipsum.</h2>
+    <h3>Lorem, ipsum dolor.</h3>
+    <h4>Lorem ipsum dolor sit.</h4>
+    <h5>Lorem ipsum dolor sit amet.</h5>
+    <h6>Lorem ipsum dolor sit amet consectetur.</h6>
 
-    <p class="text text-centered">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus asperiores impedit porro, reiciendis fugit
-        deleniti vitae ullam provident, nihil hic deserunt illo esse commodi. Illo doloremque molestias numquam aperiam
-        tempore.
-    </p>
-    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est, autem reiciendis quo minus ad saepe dolores mollitia eaque id recusandae accusamus suscipit facilis iure at, et deserunt, dolorum tenetur cumque.</p>
+    <span></span>
 
+    <div></div>
+    <section></section>
+    <article></article>
+    <aside></aside>
 
+    <secttion>
+    <h3>subheading</h3>
+    <p>loren</p>
+    </secttion>
+
+    <div class="nav">
+        <a href="https://www.google.com">google</a>
+        <a href="www.facebook.com">facebook</a>
+        <a href="www.nzherald.co.nz">nzherald</a>
+    </div>
+
+    <p>google</p>
+    <p>facebook</p>
+    <p>nz herald</p>
+    <!-- <div> -->
+    <!-- <span></span> -->
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde cumque cupiditate repellat aliquid velit id
+        commodi, sint autem at aperiam quas quod? Impedit ducimus iste veritatis minima, quod doloremque voluptate.</p>
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque reiciendis officiis porro, <span
+            class="important">animi quo atque facilis voluptatem omnis </span>
+        provident possimus ullam mollitia nihil.Harum vel, repellendus veritatis in ducimus debitis!</p>
 
 </body>
 
